2003-01-08  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-cd-selection.c:
	* src/bacon-cd-selection.h:
	* src/cd-drive.c:
	* src/cd-drive.h:
	* src/egg-*.[ch]: Add these files for the benefit of the i18n people
	(Closes: #102777)

2003-01-08  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (get_fourcc_string), (gtk_xine_open):
	add error checking to gtk_xine_open, nicked get_fourcc_string from
	xine-ui

2003-01-08  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (on_about1_activate): fix small leak (spotted by
	Alex Duggan)

2003-01-07  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (gtk_xine_get_position),
	(gtk_xine_get_current_time), (gtk_xine_get_stream_length):
	fixed endless loops, need to fix gtk_xine_open calls (check return
	value)

2003-01-07  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (gtk_xine_get_position),
	(gtk_xine_get_current_time), (gtk_xine_get_stream_length):
	harden the functions using xine_get_pos_length. 10 tries to getting the
	current positions, and length. Makes seeking better

2003-01-07  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (gtk_xine_open), (gtk_xine_play): moved the port
	rewiring from gtk_xine_play to gtk_xine_open, and add an error
	if there's no audio nor video supported in the stream (this should
	speed up seeking a bit)

2003-01-07  Bastien Nocera  <hadess@hadess.net>

	* src/.cvsignore: upd
	* src/gtk-xine.c: (gtk_xine_finalize), (gtk_xine_unrealize),
	(gtk_xine_can_get_frames): XINE_STREAM_INFO_VIDEO_HANDLED is broken for
	some decoders, we enable it so we can test it, destroy the event queue
	properly

2003-01-07  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am: doh!, add the vfs files in again
	* src/totem-video-thumbnailer.c: (save_pixbuf): only return 1 for
	hardcore errors

2003-01-07  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (gtk_xine_can_get_frames):
	XINE_STREAM_INFO_VIDEO_HANDLED is broken for now, disable it